// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account View should render Account Correctly 1`] = `
<Styled(MyAccountLayoutView)
  active="accountOverview"
  navData={
    Array [
      Object {
        "component": "account-overview",
        "displayName": "Account Overview",
        "href": "/account?id=account-overview",
        "id": "accountOverview",
        "url": "/account",
      },
      Object {
        "component": "myPlaceRewards",
        "displayName": "My Place Rewards",
        "href": "/account?id=account-overview",
        "id": "myPlaceRewards",
        "subSections": Array [
          Object {
            "component": "pointsHistoryPage",
            "displayName": "Points History",
            "href": "/account?id=account-overview",
            "id": "pointsHistory",
            "url": "/account/place-rewards/points-history",
          },
        ],
        "url": "/account/place-rewards",
      },
      Object {
        "component": "myWalletPage",
        "displayName": "My Wallet",
        "href": "/account?id=account-overview",
        "id": "myWallet",
        "url": "/account/wallet",
      },
      Object {
        "component": "earnExtraPointsPage",
        "displayName": "Earn Extra Points",
        "href": "/account?id=account-overview",
        "id": "earnExtraPoints",
        "url": "/account/extra-points",
      },
      Object {
        "component": "profileInformation",
        "displayName": "Profile Information",
        "href": "/account?id=account-overview",
        "id": "profileInformation",
        "url": "/account/profile",
      },
      Object {
        "component": "address-book",
        "displayName": "Address Book",
        "href": "/account?id=address-book",
        "id": "addressBook",
        "url": "/account/address-book",
      },
      Object {
        "component": "payment",
        "displayName": "Payment & Gift Cards",
        "href": "/account?id=payment",
        "id": "paymentGiftCards",
        "url": "/account/payment",
      },
      Object {
        "component": "myPreferencePage",
        "displayName": "My Preferences",
        "href": "/account?id=account-overview",
        "id": "myPreferences",
        "url": "/account/my-preference",
      },
      Object {
        "component": "myPlaceRewardsCCPage",
        "displayName": "My Place Rewards Credit Card",
        "href": "/account?id=account-overview",
        "id": "myPlaceRewardsCC",
        "url": "/account/rewardsCreditCard",
      },
    ]
  }
  router={
    Object {
      "query": Object {
        "id": "accountOverview",
      },
    }
  }
/>
`;

exports[`Account View should render AddressBook Correctly 1`] = `
<Styled(MyAccountLayoutView)
  active="addressBook"
  navData={
    Array [
      Object {
        "component": "account-overview",
        "displayName": "Account Overview",
        "href": "/account?id=account-overview",
        "id": "accountOverview",
        "url": "/account",
      },
      Object {
        "component": "myPlaceRewards",
        "displayName": "My Place Rewards",
        "href": "/account?id=account-overview",
        "id": "myPlaceRewards",
        "subSections": Array [
          Object {
            "component": "pointsHistoryPage",
            "displayName": "Points History",
            "href": "/account?id=account-overview",
            "id": "pointsHistory",
            "url": "/account/place-rewards/points-history",
          },
        ],
        "url": "/account/place-rewards",
      },
      Object {
        "component": "myWalletPage",
        "displayName": "My Wallet",
        "href": "/account?id=account-overview",
        "id": "myWallet",
        "url": "/account/wallet",
      },
      Object {
        "component": "earnExtraPointsPage",
        "displayName": "Earn Extra Points",
        "href": "/account?id=account-overview",
        "id": "earnExtraPoints",
        "url": "/account/extra-points",
      },
      Object {
        "component": "profileInformation",
        "displayName": "Profile Information",
        "href": "/account?id=account-overview",
        "id": "profileInformation",
        "url": "/account/profile",
      },
      Object {
        "component": "address-book",
        "displayName": "Address Book",
        "href": "/account?id=address-book",
        "id": "addressBook",
        "url": "/account/address-book",
      },
      Object {
        "component": "payment",
        "displayName": "Payment & Gift Cards",
        "href": "/account?id=payment",
        "id": "paymentGiftCards",
        "url": "/account/payment",
      },
      Object {
        "component": "myPreferencePage",
        "displayName": "My Preferences",
        "href": "/account?id=account-overview",
        "id": "myPreferences",
        "url": "/account/my-preference",
      },
      Object {
        "component": "myPlaceRewardsCCPage",
        "displayName": "My Place Rewards Credit Card",
        "href": "/account?id=account-overview",
        "id": "myPlaceRewardsCC",
        "url": "/account/rewardsCreditCard",
      },
    ]
  }
  router={
    Object {
      "query": Object {
        "id": "addressBook",
      },
    }
  }
/>
`;
